2005-04-11  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== gnome-vfs 2.10.1 ===

2005-04-11  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

2005-04-01  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in:
	* libgnomevfs/gnome-vfs-mime-info-cache.c:
	(gnome_vfs_mime_info_cache_dir_desktop_entry_is_valid):
	Plug some leaks in here too. Closes bug #172231.

2005-03-31  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-14  Kjartan Maraas  <kmaraas@gnome.org>

	* modules/http-neon-method.c: (http_get_file_info), (http_options),
	(do_create), (do_close), (do_make_directory), (do_move): Merge fix
	for leaks from HEAD. Bug #169826.

2005-03-07  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== gnome-vfs 2.10.0 ===

2005-03-07  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	* NEWS:
	Update for 2.10.0 release

2005-03-03  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== gnome-vfs 2.9.93 ===

2005-03-03  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2005-03-02  Nate Nielsen <nielsen@memberwebs.com>

        * modules/smb-method.c: (perform_authentication, auth_callback)
        Fix problems when not on a domain and browsing smb://, or 
        anonymous shares. Fixes bug #168864 and bug #167020. 
        Approval for code freeze breakage by luis and kmaraas

2005-03-01  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release bump.

=== gnome-vfs 2.9.92 ===

2005-03-01  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2005-02-24  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c (gnome_vfs_mime_get_description):
	Special case folders to get the right description.

2005-02-23  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-utils.c (gnome_vfs_read_entire_file):