@@ -1,3 +1,8 @@
+2005-04-12  Christian Kellner  <gicmo@gnome.org>
+
+	* libgnomevfs/gnome-vfs-drive.c: Merge doc fixes from
+	HEAD. Fixes bug #171336. Patch from Bastien Nocera <hadess@hadess.net>
+
 2005-04-11  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
